--- a/frontend/src/components/SudokuCell.css
+++ b/frontend/src/components/SudokuCell.css
@@ -1,12 +1,42 @@
 .sudoku-cell {
-    width: 40px;
-    height: 40px;
+    width: 46px;
+    height: 46px;
+    padding: 0;
     border: 1px solid #ccc;
-    text-align: center;
-    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
     font-family: monospace;
     background-color: var(--bg-color, white);
     color: var(--text-color, black);
+    box-sizing: border-box;
+}
+
+/* Style select to appear consistent */
+.sudoku-cell select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: none;
+    background: transparent;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    font-size: 24px;
+    font-family: monospace;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Centering for readonly cells */
+.sudoku-cell div {
+    width: 100%;
+    height: 100%;
+    font-weight: bold;
 }
 
 /* Dark theme colors */
@@ -26,6 +56,15 @@
 
 .sudoku-cell.readonly {
     font-weight: bold;
+}
+
+/* Centering for readonly cells */
+.sudoku-cell div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 [data-theme="dark"] .sudoku-cell.readonly,
